<resources>
    <string name="nom">Nom</string>
    <string name="cognom">Cognom</string>
    <string name="email">Correu electrònic</string>
    <string name="exemple_email">exemple@correu.com</string>
    <string name="telefon">Telèfon</string>
    <string name="adreca">Adreça</string>
    <string name="registrar">Registrar</string>
    <string name="app_name">PokeShop</string>
    <string name="sortir">Sortir</string>
    <string name="ajuda">Ajuda</string>
    <string name="pokemons">Pokèmons</string>
    <string name="login">Login</string>
    <string name="cart">Carreto</string>
    <string name="inici">Inici</string>
    <string name="compra">Compra</string>
    <string name="product_description">%1$s\n%2$s\n%3$s\n%4$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contrassenya</string>
    <string name="action_sign_in">Entra o registra\'t</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Benvingut!"</string>
    <string name="invalid_username">Nom d\'usuari no vàlid</string>
    <string name="invalid_password">Es necessiten més de 5 caràcters</string>
    <string name="login_failed">"El login ha fallat"</string>
    <string name="Login">Login</string>
    <string name="password">Contrassenya</string>
    <string name="iniciar">Iniciar</string>
    <string name="value_mail_ex">value@mail.ex</string>
    <string name="value">Value</string>
    <string name="no_tens_compte">No tens compte?</string>
    <string name="xxxxxxxxxxxxxx">XXXXXXXXXXXXXX</string>
    <string name="registre">Registre</string>
    <string name="destacat">DESTACAT!</string>
    <string name="descCardNovetat">
        Presentem nous Pokemons per a la nostra col·lecció Descobreix-los!
    </string>
    <string name="faqsTitle">FAQS</string>
    <string name="loremFaqsAnswer">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare ac augue et imperdiet. Donec feugiat neque ultrices libero tincidunt volutpat.</string>
    <string name="carretoTitle">Carreto</string>
    <string name="ferComanda">Realitzar Comanda</string>
    <string name="chatbot">CHATBOT</string>
    <string name="comanda_realitzada">Comanda Realitzada !!!</string>
    <string name="gracies_per_la_teva_compra">¡Gracies per la teva compra!</string>
    <string name="tornar_inici">Tornar a inici</string>
    <string name="explora">Explora</string>
    <string name="novetats">NOVETATS!</string>
    <string name="navegacio">Navegació</string>
    <string name="faq1">Com m\'arribaran els Pokemons a casa?</string>
    <string name="faq2">Com puc pagar?</string>
    <string name="faq3">Puc fer devolucions?</string>
    <string name="chatBotPlaceHolder">En que et puc ajudar?</string>
    <string name="configuracio">Configuracio</string>
</resources>