<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:background="@color/OnPrimary_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="60dp"
            android:text="@string/navegacio"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/inici"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/inici" />

            <TextView
                android:id="@+id/textView6"
                style="@style/EstilTextView"
                android:text="@string/inici"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/cart"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/cart" />

            <TextView
                android:id="@+id/textView7"
                style="@style/EstilTextView"
                android:text="@string/cart"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/pokeball"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/pokeball" />

            <TextView
                android:id="@+id/textView8"
                style="@style/EstilTextView"
                android:text="@string/pokemons"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/login" />

            <TextView
                android:id="@+id/textView9"
                style="@style/EstilTextView"
                android:text="@string/login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/register"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/register" />

            <TextView
                android:id="@+id/textView10"
                style="@style/EstilTextView"
                android:text="@string/registre"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/textView11"
                style="@style/EstilTextView"
                android:text="@string/configuracio"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/help"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:backgroundTint="@color/design_default_color_background"
                app:srcCompat="@drawable/help" />

            <TextView
                android:id="@+id/textView12"
                style="@style/EstilTextView"
                android:text="@string/ajuda"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>